--- a/setup.cfg
+++ b/setup.cfg
@@ -19,8 +19,8 @@ keywords = validation, validator, flask
 packages = find:
 
 [options.packages.find]
-include = 
-    validation.*
+where = .
+exclude = example*
 
 [options.extras_require]
 flask =
