Move to src layout, then separe the flask_validation and validation package

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ keywords = validation, validator, flask
 packages = find:
 
 [options.packages.find]
-where = .
+where = src
 exclude = example*
 
 [options.extras_require]
